--- a/activity-platform-provider/pom.xml
+++ b/activity-platform-provider/pom.xml
@@ -46,11 +46,11 @@
         </dependency>
 
         <!-- 使用Mybatis-->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis-version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.mybatis.spring.boot</groupId>-->
+<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--            <version>${mybatis-version}</version>-->
+<!--        </dependency>-->
         <!-- 使用数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -69,6 +69,18 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.18</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.caisl</groupId>
+            <artifactId>activity-platform-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
 
