--- a/activity-platform-provider/src/main/resources/application-database.yaml
+++ b/activity-platform-provider/src/main/resources/application-database.yaml
@@ -7,7 +7,7 @@ spring:
     datasource:
         name: presell-market
         driverClassName: com.mysql.jdbc.Driver
-        url: jdbc:mysql://127.0.0.1:3306/activity_platform?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull&amp;autoReconnect=true
+        url: jdbc:mysql://121.5.56.15:3306/activity_platform?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull&amp;autoReconnect=true
         username: root
-        password: root
+        password: 83867191
 
